optimized client profile route
removed duplicate codes
Added password change button to redirect to password change page

--- a/public/views/client/profil.hbs
+++ b/public/views/client/profil.hbs
@@ -80,9 +80,16 @@
 
           <div class="row mt-2">
             <div class="col text-center">
-              <button type="submit" class="btn btn-primary center-block mt-2">Modifier</button>
+              <button type="submit" class="btn btn-primary center-block mt-2">Modifier les informations du profil</button>
             </div>
           </div>
+
+          <div class="row mt-2">
+            <div class="col text-center">
+              <button type="submit" class="btn btn-primary center-block mt-2">Modifier votre mot de passe</button>
+            </div>
+          </div>
+
         </form>
       </div>
     </div>
