Couple of changes
change render of two page to one page with different messages (404 and no access)
added Psychologue profile page to test no access page

--- a/public/views/main/404.hbs
+++ b/public/views/main/404.hbs
@@ -3,7 +3,7 @@
     <div class="card card-signin my-5">
       <div class="card-body">
 
-        <h5 class="card-title text-center">Page introuvable</h5>
+        <h5 class="card-title text-center">{{{message}}}</h5>
 
       </div>
     </div>
