Fixed password change button
change from button element to a element to redirect to desired route

--- a/public/views/client/profil.hbs
+++ b/public/views/client/profil.hbs
@@ -86,7 +86,7 @@
 
           <div class="row mt-2">
             <div class="col text-center">
-              <button type="submit" class="btn btn-primary center-block mt-2">Modifier votre mot de passe</button>
+              <a type="button" class="btn btn-primary center-block mt-2" href="/changement_de_mot_de_passe">Modifier votre mot de passe</a>
             </div>
           </div>
 
