--- a/public/views/main/PasswordChange.hbs
+++ b/public/views/main/PasswordChange.hbs
@@ -23,16 +23,17 @@
 
           <div class="form-group">
             <label for="password1">Nouveau mot de passe: </label>
-            <input type="text" class="form-control" name="password1" placeholder="Entrer le mot de passe" required autofocus>
+            <input type="text" class="form-control" name="password1" id="password1" placeholder="Entrer le mot de passe" required autofocus>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
           </div>
 
           <div class="form-group">
             <label for="password2">Le mot de passe une deuxième fois: </label>
-            <input type="text" class="form-control" name="password2" placeholder="Entrer le mot de passe une deuxième fois" required>
+            <input type="text" class="form-control" oninput="CheckPW()" name="password2" id="password2" placeholder="Entrer le mot de passe une deuxième fois" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
+            <p id="alertPW"></p>
           </div>
 
           <div class="text-center">
