--- a/public/views/client/profil.hbs
+++ b/public/views/client/profil.hbs
@@ -53,9 +53,9 @@
           <div id=divEmail1 class="row mt-2">
             <div class="col">
               <label for="courriel_contact1">Courriel d'Extra: </label>
-              <input {{#if courriel_extra1}}value="{{{courriel_extra1}}}"{{/if}} type="email" class="form-control" name="courriel_contact1" placeholder="Entrer l'adresse courriel du contact" {{conditionExtra}}>
-              <input {{#if courriel_extra2}}value="{{{courriel_extra2}}}"{{/if}} type="email" class="form-control mt-2" name="courriel_contact1" placeholder="Entrer l'adresse courriel du contact" {{conditionExtra}}>
-              <input {{#if courriel_extra3}}value="{{{courriel_extra3}}}"{{/if}} type="email" class="form-control mt-2" name="courriel_contact1" placeholder="Entrer l'adresse courriel du contact" {{conditionExtra}}>
+              <input {{#if courriel_extra1}}value="{{{courriel_extra1}}}"{{/if}} type="email" class="form-control" name="courriel_extra1" placeholder="Entrer l'adresse courriel du contact" {{conditionExtra}}>
+              <input {{#if courriel_extra2}}value="{{{courriel_extra2}}}"{{/if}} type="email" class="form-control mt-2" name="courriel_extra2" placeholder="Entrer l'adresse courriel du contact" {{conditionExtra}}>
+              <input {{#if courriel_extra3}}value="{{{courriel_extra3}}}"{{/if}} type="email" class="form-control mt-2" name="courriel_extra3" placeholder="Entrer l'adresse courriel du contact" {{conditionExtra}}>
             </div>
           </div>
 
