Psychologue page profile and profile update complete
Completed routes and modification to the profile update page. 
info also updates successfully.
added the custom validation to the page.

--- a/public/views/client/profil.hbs
+++ b/public/views/client/profil.hbs
@@ -38,7 +38,7 @@
           <div class="row mt-2">
             <div class="col">
               <label for="courriel_parent1">Courriel:</label>
-              <input value="{{{courrielContact}}}" type="email" class="form-control" name="courriel_contact1" placeholder="Entrer l'adresse courriel du contact" {{condition}}>
+              <input value="{{courrielContact}}" type="email" class="form-control" name="courriel_contact1" placeholder="Entrer l'adresse courriel du contact" {{condition}}>
               <div class="valid-feedback">Valide.</div>
               <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
             </div>
