--- a/public/views/client/reservation.hbs
+++ b/public/views/client/reservation.hbs
@@ -17,7 +17,9 @@
         </div>
         <hr class="mt-4">
 
-        {{{resultat}}}
+        {{#each resultats as | resultat |}}
+          <label>{{dataValues.date}}</label>
+        {{/each}}
 
       </div>
     </div>
