Base Reservation page for client almost done (see notes)
Completed the template to generate the reservation page correctly for each client with the "clientOui" scope.

Will need to complete clientNon scope with the same thing

--- a/public/views/client/reservation.hbs
+++ b/public/views/client/reservation.hbs
@@ -18,7 +18,28 @@
         <hr class="mt-4">
 
         {{#each resultats as | resultat |}}
-          <label>{{dataValues.date}}</label>
+          <div class="row ml-4">
+            <div class="col-4">
+              <p>ID Rendez-Vous: {{dataValues.id_RV}}<p>
+            </div>
+            <div class="col-7 ml-2">
+              <p>Psychologue: {{../resultatPsy}}</p>
+            </div>
+          </div>
+          <div class="row ml-4 mt">
+            <div class="col-4">
+              <p>Date: {{dataValues.date}}</p>
+            </div>
+            <div class="col-7 ml-2">
+              <p>Heure: {{#with (lookup ../resultathoraire @index)}}{{dataValues.heure_debut}} à {{dataValues.heure_fin}}{{/with}}</p>
+            </div>
+          </div>
+          <div class="row ml-4 mt">
+            <div class="col-4">
+              <p>Note: {{dataValues.note}}</p>
+            </div>
+          </div>
+          <hr class="mt-4">
         {{/each}}
 
       </div>
