Completed available appointment page
also formatted time on every reservation pages

--- a/public/views/client/disponnibilite.hbs
+++ b/public/views/client/disponnibilite.hbs
@@ -8,7 +8,35 @@
 
       <div class="card-body text-center" id="chaquereservation">
 
-        {{{resultat}}}
+      {{#if resultats}}
+        {{#each resultats as | resultat |}}
+          <div class="row ml-4">
+            <div class="col-4">
+              <p>ID Rendez-Vous: {{dataValues.id_RV}}<p>
+            </div>
+            <div class="col-7 ml-2">
+              <p>Psychologue: {{../resultatPsy}}</p>
+            </div>
+          </div>
+          <div class="row ml-4 mt">
+            <div class="col-4">
+              <p>Date: {{dataValues.date}}</p>
+            </div>
+            <div class="col-7 ml-2">
+              <p>Heure: {{#with (lookup ../resultathoraire @index)}}{{dataValues.heure_debut}} à {{dataValues.heure_fin}}{{/with}}</p>
+            </div>
+          </div>
+          <div class="row ml-4 mt">
+            <div class="col-4">
+              <p>Note: {{dataValues.note}}</p>
+            </div>
+          </div>
+          <hr class="mt-4">
+        {{/each}}
+      {{else}}
+        <h1>Aucunes disponibilités</h1>
+      {{/if}}
+
 
       </div>
 
