simple text change in no availabilities

--- a/public/views/client/disponnibilite.hbs
+++ b/public/views/client/disponnibilite.hbs
@@ -34,7 +34,7 @@
           <hr class="mt-4">
         {{/each}}
       {{else}}
-        <h1>Aucunes disponibilités</h1>
+        <p>Aucune disponibilité</p>
       {{/if}}
 
 
