Completed confirmation routes
GET confirmation RDV route
POST confirmation RDV route

--- a/public/views/client/confirmationRDV.hbs
+++ b/public/views/client/confirmationRDV.hbs
@@ -10,42 +10,41 @@
     <div class="card mt-5">
 
       <div class="card-header">
-        <h4 class="text-center">Réservations disponibiles</h4>
+        <h4 class="text-center">Confirmer la réservation choisie</h4>
       </div>
 
       <div class="card-body text-center" id="chaquereservation">
 
       {{#if resultats}}
-        {{#each resultats as | resultat |}}
+        <form action="/calendrier/confirmation/{{resultats.dataValues.id_RV}}" method="POST">
           <div class="row ml-4">
             <div class="col-4">
-              <p>ID Rendez-Vous: {{dataValues.id_RV}}<p>
+              <p>ID Rendez-Vous: {{resultats.dataValues.id_RV}}<p>
             </div>
             <div class="col-7 ml-2">
-              <p>Psychologue: {{../resultatPsy}}</p>
+              <p>Psychologue: {{resultatPsy}}</p>
             </div>
           </div>
           <div class="row ml-4 mt">
             <div class="col-4">
-              <p>Date: {{dataValues.date}}</p>
+              <p>Date: {{resultats.dataValues.date}}</p>
             </div>
             <div class="col-7 ml-2">
-              <p>Heure: {{#with (lookup ../resultathoraire @index)}}{{dataValues.heure_debut}} à {{dataValues.heure_fin}}{{/with}}</p>
+              <p>Heure: {{heure_debut}} à {{heure_fin}}</p>
             </div>
           </div>
           <div class="row ml-4 mt">
             <div class="col-4">
-              <p>Note: {{dataValues.note}}</p>
+              <p>Note: {{resultats.dataValues.note}}</p>
             </div>
           </div>
           <div class="row mr-2 justify-content-center">
-              <a class="btn btn-primary" href="/calendrier/confirmation/{{dataValues.id_RV}}">Réserver</a>
+              <button type="submit" class="btn btn-primary">Confirmer</button>
           </div>
 
-          <hr class="mt-4">
-        {{/each}}
+      </form>
       {{else}}
-        <p>Aucune disponibilité</p>
+        <p>Résultat introuvable</p>
       {{/if}}
 
 
