--- a/public/views/client/confirmationRDV.hbs
+++ b/public/views/client/confirmationRDV.hbs
@@ -38,8 +38,9 @@
               <p>Note: {{resultats.dataValues.note}}</p>
             </div>
           </div>
-          <div class="row mr-2 justify-content-center">
-              <button type="submit" class="btn btn-primary">Confirmer</button>
+          <div class="row mr-4 justify-content-center">
+            <button type="submit" class="btn btn-primary">Confirmer</button>
+            <a class="btn btn-primary ml-2" href="/calendrier">Retour</a>
           </div>
 
       </form>
