Change button color
from blue to green on every page

--- a/public/views/client/calendar.hbs
+++ b/public/views/client/calendar.hbs
@@ -39,7 +39,7 @@
             </div>
           </div>
           <div class="row mr-2 justify-content-center">
-              <a class="btn btn-primary" href="/calendrier/confirmation/{{dataValues.id_RV}}">Réserver</a>
+              <a class="btn btn-success" href="/calendrier/confirmation/{{dataValues.id_RV}}">Réserver</a>
           </div>
 
           <hr class="mt-4">
