--- a/public/views/client/reservation.hbs
+++ b/public/views/client/reservation.hbs
@@ -10,9 +10,9 @@
 
         <div class="row">
           <div class="col">
-            <a href="/reservation/ancienne" type="button" class="btn btn-primary center-block mt-2">Anciennes Réservations</a>
-            <a href="/reservation/future" type="button" class="btn btn-primary center-block mt-2">Réservations Futures</a>
-            <a href="/reservation" type="button" class="btn btn-primary center-block mt-2">Toutes les Réservations</a>
+            <a href="/reservation/ancienne" type="button" class="btn btn-success center-block mt-2">Anciennes Réservations</a>
+            <a href="/reservation/future" type="button" class="btn btn-success center-block mt-2">Réservations Futures</a>
+            <a href="/reservation" type="button" class="btn btn-success center-block mt-2">Toutes les Réservations</a>
           </div>
         </div>
         <hr class="mt-4">
