--- a/public/views/main/PasswordChange.hbs
+++ b/public/views/main/PasswordChange.hbs
@@ -37,7 +37,7 @@
           </div>
 
           <div class="text-center">
-            <button id="bouton" type="submit" class="btn btn-primary center-block mb-2 mt-3" >Submit</button>
+            <button id="bouton" type="submit" class="btn btn-success center-block mb-2 mt-3" >Submit</button>
           </div>
 
         </form>
