--- a/public/views/main/login.hbs
+++ b/public/views/main/login.hbs
@@ -21,12 +21,12 @@
             <label for="inputPassword">Mot de passe</label>
             <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Mot de passe" required>
           </div>
-          <button class="mt-4 btn btn-lg btn-primary btn-block text-uppercase" type="submit">Connection</button>
+          <button class="mt-4 btn btn-lg btn-success btn-block text-uppercase" type="submit">Connection</button>
         </form>
         <hr class="my-3">
 
         <h6 class="text-center">Vous n'avez pas de compte?</h6>
-        <a class="mt-3 btn btn-lg btn-primary btn-block text-uppercase" href="register">Créer un compte</a>
+        <a class="mt-3 btn btn-lg btn-success btn-block text-uppercase" href="register">Créer un compte</a>
 
       </div>
     </div>
