--- a/public/views/main/passwordChanged.hbs
+++ b/public/views/main/passwordChanged.hbs
@@ -7,7 +7,7 @@
 
         <div class="row mt-2">
           <div class="col text-center">
-            <a type="button" class="btn btn-primary center-block mt-2" href="/retour_du_mot_de_passe">Retour à la page du profil</a>
+            <a type="button" class="btn btn-success center-block mt-2" href="/retour_du_mot_de_passe">Retour à la page du profil</a>
           </div>
         </div>
 
