--- a/public/views/psychologue/clients.hbs
+++ b/public/views/psychologue/clients.hbs
@@ -12,7 +12,7 @@
           <div class="row">
             <div class="col">
               <input class="form-control" type="text" placeholder="Entrez le nom de l'enfant">
-              <button class="btn btn-primary" type="submit">Chercher</button>
+              <button class="btn btn-success" type="submit">Chercher</button>
             </div>
           </div>
         </form>
