--- a/public/views/psychologue/createReservation.hbs
+++ b/public/views/psychologue/createReservation.hbs
@@ -10,10 +10,10 @@
 
         <div class="row">
           <div class="col">
-            <a href="/calendrier_psychologue/anciens" type="button" class="btn btn-primary center-block mt-2">Rendez-vous Anciens</a>
-            <a href="/calendrier_psychologue/futures" type="button" class="btn btn-primary center-block mt-2">Rendez-vous Futures</a>
-            <a href="/calendrier_psychologue/disponnible" type="button" class="btn btn-primary center-block mt-2">Rendez-vous Disponnible</a>
-            <a href="/calendrier_psychologue/create" type="button" class="btn btn-primary center-block mt-2">+</a>
+            <a href="/calendrier_psychologue/anciens" type="button" class="btn btn-success center-block mt-2">Rendez-vous Anciens</a>
+            <a href="/calendrier_psychologue/futures" type="button" class="btn btn-success center-block mt-2">Rendez-vous Futures</a>
+            <a href="/calendrier_psychologue/disponnible" type="button" class="btn btn-success center-block mt-2">Rendez-vous Disponnible</a>
+            <a href="/calendrier_psychologue/create" type="button" class="btn btn-success center-block mt-2">+</a>
           </div>
         </div>
 
@@ -59,7 +59,7 @@
 
           <div class="row mt-2">
             <div class="col text-center">
-              <button type="submit" class="btn btn-primary center-block mt-2">Créer</button>
+              <button type="submit" class="btn btn-success center-block mt-2">Créer</button>
             </div>
           </div>
         </form>
