--- a/public/views/client/confirmationRDV.hbs
+++ b/public/views/client/confirmationRDV.hbs
@@ -39,8 +39,8 @@
             </div>
           </div>
           <div class="row mr-4 justify-content-center">
-            <button type="submit" class="btn btn-primary">Confirmer</button>
-            <a class="btn btn-primary ml-2" href="/calendrier">Retour</a>
+            <button type="submit" class="btn btn-success">Confirmer</button>
+            <a class="btn btn-success ml-2" href="/calendrier">Retour</a>
           </div>
 
       </form>
