--- a/public/views/client/confirmed.hbs
+++ b/public/views/client/confirmed.hbs
@@ -7,7 +7,7 @@
 
         <div class="row mt-2">
           <div class="col text-center">
-            <a type="button" class="btn btn-primary center-block mt-2" href="{{{adresseURL}}}">{{{MsgBouton}}}</a>
+            <a type="button" class="btn btn-success center-block mt-2" href="{{{adresseURL}}}">{{{MsgBouton}}}</a>
           </div>
         </div>
 
