--- a/public/views/client/profil.hbs
+++ b/public/views/client/profil.hbs
@@ -80,13 +80,13 @@
 
           <div class="row mt-2">
             <div class="col text-center">
-              <button type="submit" class="btn btn-primary center-block mt-2">{{MessageButton}}</button>
+              <button type="submit" class="btn btn-success center-block mt-2">{{MessageButton}}</button>
             </div>
           </div>
 {{#if buttonPassword}}
           <div class="row mt-2">
             <div class="col text-center">
-              <a type="button" class="btn btn-primary center-block mt-2" href="/changement_de_mot_de_passe">Modifier votre mot de passe</a>
+              <a type="button" class="btn btn-success center-block mt-2" href="/changement_de_mot_de_passe">Modifier votre mot de passe</a>
             </div>
           </div>
 {{/if}}
