--- a/public/views/main/register.hbs
+++ b/public/views/main/register.hbs
@@ -73,7 +73,7 @@
             <input type="email" class="form-control" name="courriel_contact1" placeholder="Entrer l'adresse courriel du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
-            <button type="button" id="email1" onclick="ajoutChampContact1(1)" class="btn btn-outline-primary btn-sm mt-1">+</button>
+            <button type="button" id="email1" onclick="ajoutChampContact1(1)" class="btn btn-outline-success btn-sm mt-1">+</button>
           </div>
 
           <hr class="my-3">
@@ -108,13 +108,13 @@
             <input type="email" class="form-control" id="courriel_contact2" name="courriel_contact2" placeholder="Entrer l'adresse courriel du contact" required>
             <div class="valid-feedback">Valide.</div>
             <div class="invalid-feedback">S'il vous plait remplir le champ ci-dessus.</div>
-            <button type="button" id="email2" onclick="ajoutChampContact2(2)" class="btn btn-outline-primary btn-sm mt-1">+</button>
+            <button type="button" id="email2" onclick="ajoutChampContact2(2)" class="btn btn-outline-success btn-sm mt-1">+</button>
           </div>
 
           <hr class="my-3">
 
           <div class="text-center">
-            <button id="bouton" type="submit" class="btn btn-primary center-block mb-2 mt-3" >Submit</button>
+            <button id="bouton" type="submit" class="btn btn-success center-block mb-2 mt-3" >Submit</button>
           </div>
           <div class="text-center" id="message">*information obligatoire</div>
 
