--- a/public/views/psychologue/clients_profil.hbs
+++ b/public/views/psychologue/clients_profil.hbs
@@ -78,7 +78,7 @@
 
           <div class="row mt-2">
             <div class="col text-center">
-              <button type="submit" class="btn btn-primary center-block mt-2">Modifier</button>
+              <button type="submit" class="btn btn-success center-block mt-2">Modifier</button>
             </div>
           </div>
         </form>
