--- a/public/views/psychologue/clients_recherche.hbs
+++ b/public/views/psychologue/clients_recherche.hbs
@@ -12,7 +12,7 @@
           <div class="row">
             <div class="col">
               <input class="form-control" style="width:225px" type="text" name="nom_enfant" placeholder="Nom ou prenom de l'enfant" value="{{name}}" required>
-              <button class="btn btn-primary" type="submit">Chercher</button>
+              <button class="btn btn-success" type="submit">Chercher</button>
             </div>
           </div>
         </form>
