--- a/public/views/psychologue/reservations.hbs
+++ b/public/views/psychologue/reservations.hbs
@@ -17,10 +17,10 @@
 
         <div class="row">
           <div class="col">
-            <a href="/calendrier_psychologue/anciens" type="button" class="btn btn-primary center-block mt-2">Rendez-vous Anciens</a>
-            <a href="/calendrier_psychologue/futures" type="button" class="btn btn-primary center-block mt-2">Rendez-vous Futures</a>
-            <a href="/calendrier_psychologue/disponnible" type="button" class="btn btn-primary center-block mt-2">Rendez-vous Disponnible</a>
-            <a href="/calendrier_psychologue/create" type="button" class="btn btn-primary center-block mt-2">+</a>
+            <a href="/calendrier_psychologue/anciens" type="button" class="btn btn-success center-block mt-2">Rendez-vous Anciens</a>
+            <a href="/calendrier_psychologue/futures" type="button" class="btn btn-success center-block mt-2">Rendez-vous Futures</a>
+            <a href="/calendrier_psychologue/disponnible" type="button" class="btn btn-success center-block mt-2">Rendez-vous Disponnible</a>
+            <a href="/calendrier_psychologue/create" type="button" class="btn btn-success center-block mt-2">+</a>
           </div>
         </div>
         <hr class="mt-4">
