--- a/public/views/partials/clientNon.hbs
+++ b/public/views/partials/clientNon.hbs
@@ -5,7 +5,7 @@
       <a class="nav-link" href="/profil_client">Profil</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/reservation">Vos Réservations</a>
+      <a class="nav-link" href="/reservation/future">Vos Réservations</a>
     </li>
     <li class="nav-item">
       <a class="nav-link disabled" href="/calendrier" >Disponibilités</a>
